added compose & dockerfile. also tweaked html

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
       <h2>
         <img alt="logo" src="assets/img/glowing-bear.svg">
         <span>Glowing Bear</span>
-        <small>WeeChat web frontend</small>
+        <small>WeeChat web frontend -- Matt's fork</small>
       </h2>
       <div class="alert alert-warning" ng-show="show_tls_warning" ng-cloak><strong>You're using Glowing Bear over an unencrypted connection (http://). This is not recommended!</strong> We recommend using our secure hosted version at <a href="https://www.glowing-bear.org/">https://www.glowing-bear.org/</a>, or <a href="https://latest.glowing-bear.org/">https://latest.glowing-bear.org</a> for the latest development version. If your relay is on your local network, that is unfortunately impossible, but be aware of the implications.</div>
       <div class="alert alert-danger" ng-show="errorMessage" ng-cloak>
